# python-sdk

./: .env_template  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  example.py  openapi.json  setup.cfg
.github/workflows/: ci.yml
examples/: hpc_api.ipynb  mp_api.py  rpc_server.py
examples/data_sink_client/: delete_collection.py  download_file.py  list_collections.py  list_datasets.py  upload_files_from_path.py  upload_folder.py
examples/datasink_client/: collection_dcat.py  dataset_dcat.py  delete_collection.py  delete_dataset.py  download_file.py  download_folder.py  list_collections.py  list_datasets.py  query.py  query_dataset.py  upload_files_from_path.py  upload_folder.py
marketplace/: __init__.py  api.py  applicaton_proxy.py  client.py  core.py  models.py  utils.py  version.py
marketplace/app/: __init__.py  base.py  data_sink.py  data_sink_app.py  data_source.py  data_source_app.py  hpc_app.py  marketplace_app.py  transformation.py  transformation_app.py  utils.py
marketplace/app/v0/: __init__.py  base.py  object_storage.py  system.py  transformation.py  utils.py
marketplace/app/v0_0_1/: __init__.py  data_sink_app.py  data_source_app.py  hpc_app.py  transformation_app.py
marketplace/data_sink_client/: README.md  session.py
marketplace/datasink_client/: cli.py  session.py
marketplace/message_broker/: rpc_server.py
marketplace/message_broker/models/: message.py  message_broker.py  (+2 more)
marketplace/pre_commit_hooks/: sync_openapi_spec.py
marketplace/template_app/: main.py
template-app/: README.md  setup.cfg
template-app/app/: main.py
tests/: conftest.py  test_app.py  test_client.py  test_core.py  test_schema.py
