[metadata]
name = marketplace_template_app
version = v0.1.0
description = Template for a MarketPlace app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/materials-marketplace/python-sdk#template-app
author = Carl Simon Adorf
author_email = simon.adorf@epfl.ch
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    fastapi==0.78.0
    marketplace-sdk==0.1.2
    pydantic==1.9.0
    requests==2.26.0
    types-requests==2.27.26
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1114
pre_commit =
    pre-commit==2.15.0
tests =
    pytest==6.2.5

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v0.1.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = False

[bumpver:file_patterns]
marketplace/version.py =
    __version__ = "{version}"
setup.cfg =
    version = {version}
